--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
+
+        classpath 'com.novoda:bintray-release:0.9.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +20,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {  url 'https://dl.bintray.com/novoda-oss/snapshots/' }
         
     }
+}
+
+
+// 指定javadoc UTF-8格式
+task javadoc(type: Javadoc) {
+    options.encoding = "utf-8"
 }
 
 task clean(type: Delete) {
