--- a/smart-ui/build.gradle
+++ b/smart-ui/build.gradle
@@ -5,7 +5,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -27,6 +27,7 @@ dependencies {
 
     api 'androidx.appcompat:appcompat:1.0.0'
     api 'com.google.android.material:material:1.0.0'
+    api 'com.airbnb.android:lottie:3.0.7'
 }
 
 apply from: '../bintray.gradle'
