--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
 
         <activity android:name=".TestActivity">
         </activity>
+
+        <activity android:name=".RefreshActivity" />
     </application>
 
 </manifest>
