--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         </activity>
 
         <activity android:name=".RefreshActivity" />
+
+        <activity android:name=".transition.DetailActivity" />
+
     </application>
 
 </manifest>
