--- a/smart-ui/build.gradle
+++ b/smart-ui/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 
     api 'androidx.appcompat:appcompat:1.0.0'
     api 'com.google.android.material:material:1.0.0'
-    api 'com.airbnb.android:lottie:2.8.0'
+//    api 'com.airbnb.android:lottie:2.8.0'
+    api 'com.airbnb.android:lottie:3.0.0'
+
 }
 
 apply from: '../bintray.gradle'
